# blender-physics

./: #.gitignore#  .#bake.py  .gitignore  __init__.py  bake.py  bake.py~
animate/: #load_mesh.py#  load_mesh.py
lib/FEM/: FEM_SIMULATION  README  input_example.json
lib/FEM/lib/: libalglib.so.3  libarpack.so.2  libbtf.so.1  libf2c.so.2  libfftw3_mpi.so.3  libgfortran.so.4  libglib-2.0.so.0  libhdf5_openmpi.so.100  libhdf5_openmpi_fortran.so.100  libhdf5_openmpi_hl.so.100  libipopt.so.1  libklu.so.1  (+8 more)
lib/mass_spring/: input_para.json
lib/meshless/: .#blender_physics.json  .blender_physics.json.swp  blender_physics.json
lib/simple-translation/: .#simple_translation.cpp  CMakeLists.txt  CMakeLists.txt~  blender_physics.json  simple_translation.cpp  simple_translation.cpp~
operators/: #__init__.py#  #bake_operators.py#  __init__.py  animate_operators.py  bake_operators.py  bake_operators.py~  constraint_operators.py  object_operators.py  state_properties.py
properties/: #object_properties.py#  __init__.py  bake_properties.py  object_properties.py  object_properties.py~  physika_properties.py  physika_properties.py~  state_properties.py
states/: __init__.py  animate_state.py  base_state.py  constraint_state.py  simulate_state.py
states/animate_state/: animate_operators.py  load_mesh.py
states/constraint_state/: .#constraint_operators.py  __init__.py  constraint_operators.py
states/export_state/: __init__.py  export_operators.py  export_properties.py
states/obstacle_state/: __init__.py  obstacle_operators.py  obstacle_properties.py
states/parameter_state/: #set_parameter.py#  __init__.py  discrete_types.py  para_props.py  para_temp.json  para_temp.py  parameter_state.py  set_parameter.py
states/simulate_state/: #bake.py#  .#save_inputs.py  bake.py  bake_operators.py  save_inputs.py  save_json.py
ui/: __init__.py  animate_ui.py  base_union.py  constraint_ui.py  simulate_ui.py
(+84 files in other folders)
