project(simple-translation)
cmake_minimum_required(VERSION 2.8)

list(APPEND CMAKE_CXX_FLAGS " -std=c++11 -O3 -fpermissive")

include_directories(${PROJECT_SOURCE_DIR})
include_directories(libigl)
find_package(Eigen3 REQUIRED)
if(EIGEN3_FOUND)
  message("-- Eigen @ ${EIGEN3_INCLUDE_DIR}")
  message("-- Eigen version: ${EIGEN3_VERSION}")
  include_directories(${EIGEN3_INCLUDE_DIR})
endif(EIGEN3_FOUND)

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS filesystem system program_options REQUIRED)
if(Boost_FOUND)
  message("-- Boost @ ${Boost_INCLUDE_DIRS}")
  include_directories(${Boost_INCLUDE_DIRS})
endif(Boost_FOUND)

add_executable(meshless simple_translation.cpp)
target_link_libraries(meshless ${Boost_LIBRARIES})
